--- a/src/App.css
+++ b/src/App.css
@@ -279,7 +279,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("background.jpg");
+}
+.center-text img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
 }
 
 .center-text h1 {
